--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,10 @@
             "allow": [],
             "depConstraints": [
               {
+                "sourceTag": "type:feature",
+                "onlyDependOnLibsWithTags": ["type:ui"]
+              },
+              {
                 "sourceTag": "*",
                 "onlyDependOnLibsWithTags": ["*"]
               }
