add report feature

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,9 @@
     "nrwl.angular-console",
     "esbenp.prettier-vscode",
     "firsttris.vscode-jest-runner",
-    "dbaeumer.vscode-eslint"
-  ]
+    "dbaeumer.vscode-eslint",
+    "Mikael.Angular-BeastCode"
+  ],
+  "emmet.showSuggestionsAsSnippets": true,
+  "editor.snippetSuggestions": "top"
 }
