--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,8 @@
     "blockpit-app": "apps/blockpit-app",
     "blockpit-app-e2e": "apps/blockpit-app-e2e",
     "design-system": "libs/design-system",
+    "report-feature-generate": "libs/report/feature-generate",
+    "report-shell": "libs/report/shell",
     "transaction-feature-overview": "libs/transaction/feature-overview",
     "transaction-shell": "libs/transaction/shell"
   }
