Add atoms button

--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
   "projects": {
     "blockpit-app": "apps/blockpit-app",
     "blockpit-app-e2e": "apps/blockpit-app-e2e",
+    "design-system-atoms": "libs/design-system/atoms",
     "report-feature-generate": "libs/report/feature-generate",
     "report-shell": "libs/report/shell",
     "transaction-feature-overview": "libs/transaction/feature-overview",
