--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@blockpit-nx-example/design-system/atoms": [
+        "libs/design-system/atoms/src/index.ts"
+      ],
       "@blockpit-nx-example/report/feature-generate": [
         "libs/report/feature-generate/src/index.ts"
       ],
