--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,9 @@
       "@blockpit-nx-example/design-system/atoms": [
         "libs/design-system/atoms/src/index.ts"
       ],
+      "@blockpit-nx-example/design-system/molecules": [
+        "libs/design-system/molecules/src/index.ts"
+      ],
       "@blockpit-nx-example/report/feature-generate": [
         "libs/report/feature-generate/src/index.ts"
       ],
