feat: new rules for atoms and molecules in .eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,8 +17,12 @@
                 "onlyDependOnLibsWithTags": ["type:ui"]
               },
               {
+                "sourceTag": "ui-type:atoms",
+                "notDependOnLibsWithTags": ["ui-type:molecules"]
+              },
+              {
                 "sourceTag": "ui-type:molecules",
-                "onlyDependOnLibsWithTags": []
+                "onlyDependOnLibsWithTags": ["ui-type:atoms"]
               },
               {
                 "sourceTag": "*",
