--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "coverage": "open ./coverage/apps/blockpit-app/index.html"
   },
   "private": true,
   "dependencies": {
