--- a/libs/design-system/atoms/project.json
+++ b/libs/design-system/atoms/project.json
@@ -17,6 +17,39 @@
         "jestConfig": "libs/design-system/atoms/jest.config.js",
         "passWithNoTests": true
       }
+    },
+    "storybook": {
+      "executor": "@nrwl/storybook:storybook",
+      "options": {
+        "uiFramework": "@storybook/angular",
+        "port": 4400,
+        "config": {
+          "configFolder": "libs/design-system/atoms/.storybook"
+        },
+        "projectBuildConfig": "design-system-atoms:build-storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nrwl/storybook:build",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "uiFramework": "@storybook/angular",
+        "outputPath": "dist/storybook/design-system-atoms",
+        "config": {
+          "configFolder": "libs/design-system/atoms/.storybook"
+        },
+        "projectBuildConfig": "design-system-atoms:build-storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
     }
   },
   "tags": ["type:ui", "ui-type:atoms"]
