--- a/package.json
+++ b/package.json
@@ -39,7 +39,14 @@
     "@nrwl/eslint-plugin-nx": "13.10.3",
     "@nrwl/jest": "13.10.3",
     "@nrwl/linter": "13.10.3",
+    "@nrwl/storybook": "^14.0.5",
+    "@nrwl/web": "^14.0.5",
     "@nrwl/workspace": "13.10.3",
+    "@storybook/addon-essentials": "~6.4.12",
+    "@storybook/angular": "~6.4.12",
+    "@storybook/builder-webpack5": "~6.4.12",
+    "@storybook/core-server": "~6.4.12",
+    "@storybook/manager-webpack5": "~6.4.12",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
@@ -53,6 +60,7 @@
     "nx": "13.10.3",
     "prettier": "^2.5.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "webpack": "^5.64.0"
   }
 }
